--- a/kwitter.html
+++ b/kwitter.html
@@ -16,11 +16,10 @@
 <body>
     <div id="decor"></div>
 <center>
-	<h1 class="header">	
-		ST. FAIRY CHATTING	<sup>
-	<img src="m2.png">
-	</sup>
-</h1>
+	 <h1 class="header">	
+		ST. FAIRY CHATTING	
+		<sup> <img src="m2.png"> </sup>
+     </h1>
 	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
 	<img src="logo.png" class="logo">
 		<h3 >See what is happening in our school!</h3>
